 <resources>
    <string name="app_name">Running Dead</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_play_map">Running Dead</string>
    <string name="play">Play</string>
    <string name="mainMenuName">Menu</string>
    <string name="viewscoreButton">View Score</string>

     <!-- How to Play How to Play-->
    <string name="title_activity_how_to_play">How To Play</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="getting_started_1"><u>GETTING STARTED</u></string>
    <string name="getting_started_2">Running Dead is a fitness application that forces you to exercise to
        survive the virtual zombie attack!<!--new line-->\n\n<!--new line-->To start
        playing, tap play and register an account.</string>
    <string name="next_button">NEXT</string>

     <!-- How to Play Learning to Play-->
    <string name="learning_1"><u>LEARNING TO PLAY</u></string>
    <string name="learning_2">Login to Running Dead<!--new line-->\n\nTo Play,
        Enable the GPS function on your phone and tap Play.<!--new line-->\n\n<!--new line-->You
        are now viewing the Map, tap the Centre Location button in the top right hand corner and
        the screen will now centre to your current location.<!--new line-->\n\n<!--new line-->In
        this game you will need to accumulate points for the distances you cover.</string>

    <!-- How to Play Learning to Play-->
    <string name="playing_1"><u>PLAYING THE GAME</u></string>
    <string name="playing_2">Zombies will now spawn around your Immediate Location,
        The objective of the game is to avoid these zombies while trying to reach
        the Finish Line.<!--new line-->\n\n<!--new line-->In
        this game you will need to accumulate points for the distances you cover,
        Try to get as far as you can!
        <!--new line-->\n\n<!--new line-->\t\t\t\t\t\t\tIt is time to start Playing!</string>g>
     <string name="backToMain">Back to Main Menu</string>

    <!-- RegisterActivity Strings-->
    <string name="title_activity_register">Register Activity</string>
    <string name="registerScreen">Register Screen</string>
    <string name="registerScreenPrompt1">Welcome to the register Screen</string>
    <string name="registerScreenPrompt2">Please enter your details below to sign up for a free
                                            Running Dead account:</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailAddress">Email Address</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="done_button">DONE</string>
    <string-array name="Gender">
         <item>Male</item>
         <item>Female</item>
         <item>Zombie</item>
    </string-array>


    <!-- RegisterSuccessful Strings/Variables-->

    <string name="title_activity_register_success">RegisterSuccess</string>
    <string name="registerSuccess">Register Successful!</string>
    <string name="registerSuccessPrompt1">Your Registration has been completed</string>
    <string name="registerSuccessPrompt3">Thanks for registering with Running Dead!</string>

    <string name="done_button2">BACK TO MENU</string>

    <!-- RegisterUnsuccessful Strings/Variables-->

    <string name="title_activity_register_unsuccessful">RegisterUnsuccessful</string>
    <string name="registerFail">Registration Unsuccessful!</string>
    <string name="registerFailPrompt1">Your Registration has been unsuccessful</string>
    <string name="registerFailPrompt3">Please click the button below to try again.</string>
    <!--<string name="registerFailPrompt4"></string>-->
    <string name="done_button3">TRY AGAIN</string>

    <!--RunningNFC Strings/Variables-->
    <string name="nfcButton">Use NFC</string>
    <string name="title_activity_running_nfc">RunningNFC</string>

    <!-- LoginMenu Strings/Variables-->

    <!-- ScoreScreen Strings/Variables-->
    <string name="title_activity_score_screen">ScoreScreen</string>
    <string name="scoreScreen">Score</string>
    <string name="scoreScreenPrompt">This is the Score Screen, your scores will be displayed here.</string>
    <string name="distanceTravelled">Distance Travelled: </string>
     <string name="writeButton">Write to NFC Tag</string>
     <string name="writeTag">Tag status</string>

 </resources>
