<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/frameLayout"
        android:theme="@style/AppTheme"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="32sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/scoreScreen"
            android:id="@+id/ScoreScreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="15dp"
            android:textSize="20sp"
            android:text="@string/scoreScreenPrompt"
            android:id="@+id/ScoreText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="15dp"
            android:textSize="20sp"
            android:text="@string/distanceTravelled"
            android:id="@+id/distanceTravelled" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backToMain"
        android:id="@+id/backToMainButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>